# ai-consulting-agent

./: .cursorrules  Dockerfile  PROMPT_ARCHITECT_SKILL.md  entrypoint.sh  package-lock.json  pyproject.toml  render.yaml
.pipeline/: 01-firecrawl-raw.json
ai_consulting_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_projects_hitl.py
app/: __init__.py  config.py  exceptions.py  llm_secrets_store.py  main.py  pdf_fonts.py  redis_client.py  seed.py
app/api/: artifacts.py  deps.py  diagnostic.py  hypotheses.py  iqd.py  knowledge_graph.py  projects.py  report.py  settings_llm.py  workflow.py
app/db/: base.py  neo4j_client.py  session.py
app/models/: __init__.py  artifact.py  consultant.py  hypothesis.py  llm_audit.py  project.py  questionnaire.py  stage.py
app/orchestration/: __init__.py  graph.py  langgraph_runner.py  stages.py  state.py  workflow_rules.py
app/schemas/: __init__.py  artifact.py  diagnostic.py  hypothesis.py  llm_audit.py  project.py  workflow.py
app/services/: diagnostic_service.py  file_text_extract.py  hypothesis_service.py  iqd_service.py  kg_service.py  (+4 more)
fonts/: README.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
scripts/: generate-landing.sh  validate-firecrawl.js
tests/: test_artifacts_api.py  test_diagnostic_schema.py  test_file_text_extract.py  test_health.py  test_kg_api.py  test_llm_client.py  test_pdf_fonts.py  test_settings_llm.py  test_stages.py  test_workflow_api.py  test_workflow_rules.py
(+43 files in other folders)
